[package]
name = "nftver"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2021"
description = "Coming Soon!"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/nftver"
homepage = "https://crates.io/crates/nftver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
paq = "0.4.0"
image = "0.23.14"
qrcode = "0.12.0"
ab_glyph = "0.2.12"
url = "0.5.10"
chrono = "0.4.19"